align fix

--- a/transposition-frontend/src/header/header.css
+++ b/transposition-frontend/src/header/header.css
@@ -14,7 +14,6 @@ header {
     display: flex;
     width: 100%;
     max-width: 1200px;
-    align-items: center;
     justify-content: space-between;
 }
 
